--- a/Nastya/css/style.css
+++ b/Nastya/css/style.css
@@ -492,25 +492,61 @@ body {
           align-items: flex-end;
 }
 
-.slider-b-body__get span:nth-child(1) {
+.slider-b-body__get span {
   font-size: 23px;
   line-height: 28px;
   color: #000000;
-}
-
-.slider-b-body__get span:nth-child(2) {
-  border: 1px solid #000000;
-  width: 20px;
-  height: 20px;
-  border-radius: 3px;
-  margin-left: 15px;
-  margin-bottom: 5px;
+  margin-bottom: -5px;
+  margin-right: 15px;
 }
 
 .slider-b-body__more {
   font-size: 23px;
   line-height: 28px;
   color: #000000;
+}
+
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.custom-checkbox + label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.custom-checkbox + label::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  border: 1px solid #000000;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.custom-checkbox:checked + label::before {
+  border-color: #0b76ef;
+  background-color: #0b76ef;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
 .lvl-block {
@@ -525,10 +561,10 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 41px;
-  padding-top: 2px;
 }
 
 .lvl-block__item {
+  cursor: pointer;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 25%;
           flex: 1 1 25%;
@@ -541,6 +577,10 @@ body {
 
 .lvl-block__item:not(:last-child) {
   border-right: 1px solid #000000;
+}
+
+.lvl-block__item:hover {
+  background: rgba(205, 204, 195, 0.56);
 }
 
 .bar-block {
